# skillbox

./: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad5_ver2.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
Module15/: zad1.cpp  zad2.cpp  zad4_v2.cpp
Module16/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
Module17/: zad1.cpp  zad2.cpp  zad3.cpp
Module18/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp
Module19/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
Module19/answers/: a1.txt  a10.txt  a11.txt  a12.txt  a13.txt  a3.txt  a4.txt  a5.txt  a6.txt  a7.txt  a8.txt  a9.txt
Module19/questions/: q1.txt  q10.txt  q11.txt  q12.txt  q13.txt  q2.txt  q3.txt  q4.txt  q5.txt  q6.txt  q7.txt  q8.txt  q9.txt
Module20/: zad1.cpp  zad2.cpp  zad3.cpp  zad4v2.cpp
module21/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp
module22/: zad1.cpp  zad2.cpp  zad3.cpp
module23/: zad1.cpp  zad2.cpp  zad3.cpp
module24/: zad1.cpp  zad2.cpp  zad3.cpp
module25/: CMakeLists.txt
module25/zad1/: mylib.h  zad1.cpp
module26/: zad1.cpp  zad2.cpp  zad3.cpp
module27/: zad1.cpp  zad1v4  zad1v4.cpp  zad2.cpp  zad3.cpp
module28/: zad1.cpp  zad1v3.cpp  zad2.cpp  zad3.cpp
module29/: zad1  zad1.cpp
module30/zad3/: CMakeLists.txt  main.cpp
module31/: zad1v3.cpp  zad2.cpp  zad2v5.cpp
module32/: film2.json  zad1.cpp  zad2.cpp  zad3.pb.cc  zad3.pb.h  zad3.proto
module33/: zad1.cpp  zad2.cpp  zad3v2.cpp  zad4.cpp
module35/: task2_1.cpp  task2_2.cpp  zad1.cpp  zad2.cpp  zad3.cpp
module36/: CMakeLists.txt  colorcircle.cpp  colorcircle.h  main.cpp  mainwindow.cpp  mainwindow.h
(+17 files in other folders)
